--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                     <!-- Sở thích -->
                     <ul class="extend">
                         <div class="extend-item--title-header-sothich">
-                            <h1 class="extend-item--title-h1-ST">Sở thích</h1>
+                            <h1 class="extend-item--title-h1-ST">興味</h1>
                         </div>
                         <li class="extend-item">
                             <div class="extend-item-text-title">
