--- a/index.html
+++ b/index.html
@@ -723,16 +723,20 @@
                                     <div class="extend-item--body active-line-MT">
                                         <h4 class="extend-item-text-title--h4-MT">
                                             <i class='bx bxs-star'></i>
-                                            たくさん経験と技能と知識があることです。特に取引先と話すことができるとチームワーク方よくになるために、談義技能学びたいです。そして、3年間ぐらいでジュニアからシニアまで開発者ようになることを支援する。
+                                            会話技能、具体的にはチームメンバーや取引先との円滑な話し方を身に付ける。
                                         </h4>
                                         <!-- <p class="extend-item-para-title">
                                            .../9/2022
                                         </p> -->
-                                        <p class="extend-item-para-text">
+                                        <!-- <p class="extend-item-para-text">
                                             
-                                        </p>
+                                        </p> -->
                                     </div>
                                     <div class="extend-item--body">
+                                        <h4 class="extend-item-text-title--h4-MT">
+                                            <i class='bx bxs-star'></i>
+                                            三年程度でジュニア開発者をシニア開発者にまで成長させる支援ができる。
+                                        </h4>
                                         <h4 class="extend-item-text-title--h4-MT">
                                             <i class='bx bxs-star'></i>
                                             三年目から五年目の間にプロジェクトマネージャーになることです。
