--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     <span class="overhead">
                                         住所
                                     </span>
-                                    Linh Trung郡、Thủ Đức市
+                                    Thủ Đức市、Linh Trung郡
                                 </li>
                             </ul>
                         </div>
@@ -195,7 +195,7 @@
                                 初めまして。 Haiと申します。
                             </p>
                             <p class="extend-item-para">
-                                今ベトナム国家大学ホーチミン市情報通信大学の情報技術科学学部の３年生です。専攻はITです。高校生のときからパソコンに興味を持っていたので、高校卒業後(こうこうそつぎょうご)、パソコンについて深く研究するために、IT系(アイティーけい)の大学に進学しました。今AIとフロントエンドと機械学習を勉強しているところです。暇なときはギターを弾いたり、日本語を勉強したり、時々友達と一緒に旅行に行ったりしています。私の強みは数学です。数学がわかるおかげで、プログラムも上手くできます。弱みは英語で、話すことがあまり得意(とくい)ではありません。でも、だからこそ、大学では、頑張って英語を勉強しています。短期的な目標は１年目から２年目の間に会社の実際のプロジェクトに参加することです。そのための技能や経験を得るために、たくさん勉強しなければなりません。長期的な目標は３年目から５年目の間にプロジェクトマネージャーになることです。何でもできる社員になりたいです。 どうぞよろしくお願いいたします。
+                                今ベトナム国家大学ホーチミン市情報通信大学の情報技術科学学部の３年生です。専攻はITです。高校生のときからパソコンに興味を持っていたので、高校卒業後、パソコンについて深く研究するために、IT系の大学に進学しました。今AIとフロントエンドと機械学習を勉強しているところです。暇なときはギターを弾いたり、日本語を勉強したり、時々友達と一緒に旅行に行ったりしています。私の強みは数学です。数学がわかるおかげで、プログラムも上手くできます。弱みは英語で、話すことがあまり得意ではありません。でも、だからこそ、大学では、頑張って英語を勉強しています。短期的な目標は１年目から２年目の間に会社の実際のプロジェクトに参加することです。そのための技能や経験を得るために、たくさん勉強しなければなりません。長期的な目標は３年目から５年目の間にプロジェクトマネージャーになることです。何でもできる社員になりたいです。 
                             </p>
                             <p class="extend-item-para">
                                 どうぞよろしくお願いいたします。
