--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/css/mai.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="icon" href="./img/UIT.png" type="image/x-icon" sizes="192x192">
+    <!-- btn quay lại đầu trang -->
     <title>CV_HoHacHai</title>
 </head>   
 <script type='text/javascript'>
@@ -420,7 +421,7 @@
                                 </h2>
 
                                 <div class="extend-item--bodys">
-                                    <div class="extend-item--body active-line">
+                                    <!-- <div class="extend-item--body active-line">
                                         <h4 class="extend-item-text-title--h4">
                                             ベトナム国家大学ホーチミン市情報通信大学の情報技術科学学部です
                                         </h4>
@@ -430,18 +431,84 @@
                                         <p class="extend-item-para-text">
                                             今UIT大学の学生の３年生です。専攻は日本のIT方向です。そして、情報通信大学の情報技術科学学部です。
                                         </p>
-                                    </div>
+                                    </div> -->
                                     <div class="extend-item--body">
-                                        <h4 class="extend-item-text-title--h4">
-                                            スコア
+                                        <h4 class="extend-item-text-title--h4-MT">
+                                            <i class='bx bxs-star'></i>
+                                            大学：ベトナム国家大学ホーチミン市情報通信大学
                                         </h4>
-                                        <p class="extend-item-para-title">
-                                            ２０１９年から - 今日 
-                                         </p>
-                                         <p class="extend-item-para-text">
-                                            今私のスコアは７.９２点です。そして、いろいろ科目が得意は数学が９.９点と機械学習が９.３点とOSの科目８.９です。。。
+                                        <h4 class="extend-item-text-title--h4-MT">
+                                            <i class='bx bxs-star'></i>
+                                            学部：情報技術科学学部。
+                                        </h4>
+                                        <h4 class="extend-item-text-title--h4-MT">
+                                            <i class='bx bxs-star'></i>
+                                            学年：３年
+                                        </h4>
+                                        <h4 class="extend-item-text-title--h4-MT">
+                                            <i class='bx bxs-star'></i>
+                                            専攻：日本向けIT
+                                        </h4>
+                                        <h4 class="extend-item-text-title--h4-MT">
+                                            <i class='bx bxs-star'></i>
+                                            ２０１９年入学
+                                        </h4>
+                                        <h4 class="extend-item-text-title--h4-MT">
+                                            <i class='bx bxs-star'></i>
+                                            ２０２３年卒業予定 
+                                        </h4>
+                                        <!-- <p class="extend-item-para-title">
+                                            .../.../2023
+                                         </p> -->
+                                         <!-- <p class="extend-item-para-text"> -->
+                                            <!-- Tích lũy kiến thức và kinh nghiệm của bản thân để 3 - 4 năm tới có thể trở thành một lập trình viên fullstack và từng ngày phát triển kỹ năng của bản thân và góp mặt trong hàng ngũ nhân viên xuất sắc của công ty đó là mục tiêu trong sự nghiệp của mình. -->
                                         </p>
                                     </div>
+                                    <div class="extend-item--body">
+                                        <h4 class="extend-item-text-title--h4-MT">
+                                            <i class='bx bxs-star'></i>
+                                            GPA平均７．９２
+                                        </h4>
+                                        <h4 class="extend-item-text-title--h4-MT">
+                                            <i class='bx bxs-star'></i>
+                                            得意科目のGPA：
+                                        </h4>
+                                        <h4 class="extend-item-text-title--h4-MT score-object">
+                                            <!-- <i class='bx bxs-star'></i> -->
+                                            - 数学：９.９
+                                        </h4>
+                                        <h4 class="extend-item-text-title--h4-MT score-object">
+                                            <!-- <i class='bx bxs-star'></i> -->
+                                            - 機械学習：９.３
+                                        </h4>
+                                        <h4 class="extend-item-text-title--h4-MT score-object">
+                                            <!-- <i class='bx bxs-star'></i> -->
+                                            - OS：８.９
+                                        </h4>
+                                        <!-- <p class="extend-item-para-title">
+                                            .../.../2023
+                                         </p> -->
+                                         <!-- <p class="extend-item-para-text"> -->
+                                            <!-- Tích lũy kiến thức và kinh nghiệm của bản thân để 3 - 4 năm tới có thể trở thành một lập trình viên fullstack và từng ngày phát triển kỹ năng của bản thân và góp mặt trong hàng ngũ nhân viên xuất sắc của công ty đó là mục tiêu trong sự nghiệp của mình. -->
+                                        </p>
+                                    </div>
+                                    <!-- <div class="extend-item--body">
+                                        <h4 class="extend-item-text-title--h4">
+                                            GPA平均７．９２
+                                        </h4>
+                                        <p class="extend-item-para-title">
+                                            得意科目のGPA
+                                         </p>
+                                         <p class="extend-item-para-text">
+                                            数学：９.９
+                                        </p>
+                                         <p class="extend-item-para-text">
+                                            機械学習：９.３
+                                        </p>
+                                         <p class="extend-item-para-text">
+                                            OS：８.９
+                                        </p>
+                                    </div> -->
                                 </div>
                             </div>
                         </li> 
