--- a/index.html
+++ b/index.html
@@ -556,16 +556,22 @@
                                          </p> -->
                                          <p class="extend-item-para-text">
                                             Đặng Ngọc Sơn社長のウェブサイト：fullstack.edu.vn<br>
-                                            - ＨＴＭＬとＣＳＳ<br>
+                                            <!-- - ＨＴＭＬとＣＳＳ<br>
                                             - 技術プログラミングJavaScript<br>
-                                            - レスポンシブウェブサイトのための、グリッドシステム使用<br> 
+                                            - レスポンシブウェブサイトのための、グリッドシステム使用<br> -->
+                                            <p class="extend-item-para-text-list">- ＨＴＭＬとＣＳＳ</p>
+                                            <p class="extend-item-para-text-list">- 技術プログラミングJavaScript</p>
+                                            <p class="extend-item-para-text-list">- レスポンシブウェブサイトのための、グリッドシステム使用</p> 
                                         </p>
                                         <br>
                                          <p class="extend-item-para-text">
                                             Lại Tuấn Dũng博士（オーストラリア）のAIについて勉強していることです<br>
-                                            - 技術プログラミングのPython<br>
+                                            <!-- - 技術プログラミングのPython<br>
                                             - データサイエンス<br>
-                                            - 人工知能 <br> 
+                                            - 人工知能 <br>  -->
+                                            <p class="extend-item-para-text-list">- 技術プログラミングのPython</p>
+                                            <p class="extend-item-para-text-list">- データサイエンス</p>
+                                            <p class="extend-item-para-text-list">- 人工知能</p> 
                                         </p>
                                     </div>
                                 </div>
