--- a/index.html
+++ b/index.html
@@ -271,6 +271,15 @@
                                 <div class="col l-6 m-6 big-project">
                                     <div id="zoom">
                                         <div class= "case-item">
+                                            <img src="./img/fighting-game.png" alt="" class="case-item--img">
+                                        </div>
+                                        <a class="list-project" href="https://hohachai-fighting-game.netlify.app/"><h3 class="case-item--h3">格闘ゲーム</h3></a>
+                                        
+                                    </div>
+                                </div>
+                                <div class="col l-6 m-6 big-project">
+                                    <div id="zoom">
+                                        <div class= "case-item">
                                             <img src="./img/apple_store.png" alt="" class="case-item--img">
                                         </div>
                                         <a class="list-project" href="https://github.com/HaiHoHac2001/My-Apple-Store"><h3 class="case-item--h3">アップルストア</h3></a>
