--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                 初めまして。 Haiと申します。
                             </p>
                             <p class="extend-item-para">
-                                今ベトナム国家大学ホーチミン市情報通信大学の情報技術科学学部の３年生です。専攻はITです。高校生のときからパソコンに興味を持っていたので、高校卒業後、パソコンについて深く研究するために、IT系の大学に進学しました。今AIとフロントエンドと機械学習を勉強しているところです。暇なときはギターを弾いたり、日本語を勉強したり、時々友達と一緒に旅行に行ったりしています。私の強みは数学です。数学がわかるおかげで、プログラムも上手くできます。弱みは英語で、話すことがあまり得意ではありません。でも、だからこそ、大学では、頑張って英語を勉強しています。短期的な目標は１年目から２年目の間に会社の実際のプロジェクトに参加することです。そのための技能や経験を得るために、たくさん勉強しなければなりません。長期的な目標は３年目から５年目の間にプロジェクトマネージャーになることです。何でもできる社員になりたいです。 
+                                今ベトナム国家大学ホーチミン市情報通信大学の情報技術科学学部の３年生です。専攻はITです。高校生のときからパソコンに趣味を持っていたので、高校卒業後、パソコンについて深く研究するために、IT系の大学に進学しました。今AIとフロントエンドと機械学習を勉強しているところです。暇なときはギターを弾いたり、日本語を勉強したり、時々友達と一緒に旅行に行ったりしています。私の強みは数学です。数学がわかるおかげで、プログラムも上手くできます。弱みは英語で、話すことがあまり得意ではありません。でも、だからこそ、大学では、頑張って英語を勉強しています。短期的な目標は１年目から２年目の間に会社の実際のプロジェクトに参加することです。そのための技能や経験を得るために、たくさん勉強しなければなりません。長期的な目標は３年目から５年目の間にプロジェクトマネージャーになることです。何でもできる社員になりたいです。 
                             </p>
                             <p class="extend-item-para">
                                 どうぞよろしくお願いいたします。
@@ -533,13 +533,13 @@
                                     <div class="extend-item--body active-line-skill">
                                         <h4 class="extend-item-text-title--h4-skill">
                                             <i class='bx bxs-check-square'></i>
-                                            談義技能
+                                            会話技能
                                         </h4>
                                         <!-- <p class="extend-item-para-title">
                                            2019 - nay 
                                         </p> -->
                                         <p class="extend-item-para-text">
-                                            私にはプレゼンテーションスキルと大勢の前まえで話すはなす能力があること。そして、私はよくクラス全体の前まえでプレゼンテーションを行う人です。また、高校時代のときはギタークラブを設立した 三十人ぐらいがいたことです。
+                                            私には大勢の人がいる前でもしっかり話すことができる能力があります。高校時代にギタークラブを作り、３０人の部員と一緒に活動したり、大勢の人の前で演奏したりした経験のおかげです。私は大学でも、クラスメイトの前で積極的にプレゼンテーションを担当するようにしています。
                                         </p>
                                     </div>
                                     <div class="extend-item--body active-line-skill">
@@ -569,17 +569,17 @@
                                             - 技術プログラミングJavaScript<br>
                                             - レスポンシブウェブサイトのための、グリッドシステム使用<br> -->
                                             <p class="extend-item-para-text-list">- ＨＴＭＬとＣＳＳ</p>
-                                            <p class="extend-item-para-text-list">- 技術プログラミングJavaScript</p>
+                                            <p class="extend-item-para-text-list">- 技術プログラミングJavaScript </p>
                                             <p class="extend-item-para-text-list">- レスポンシブウェブサイトのための、グリッドシステム使用</p> 
                                         </p>
                                         <br>
                                          <p class="extend-item-para-text">
-                                            Lại Tuấn Dũng博士（オーストラリア）のAIについて勉強していることです<br>
+                                            - Lại Tuấn Dũng博士（オーストラリア）のAIに関する学習<br>
                                             <!-- - 技術プログラミングのPython<br>
                                             - データサイエンス<br>
                                             - 人工知能 <br>  -->
                                             <p class="extend-item-para-text-list">- 技術プログラミングのPython</p>
-                                            <p class="extend-item-para-text-list">- データサイエンス</p>
+                                            <p class="extend-item-para-text-list">- データサイエンス </p>
                                             <p class="extend-item-para-text-list">- 人工知能</p> 
                                         </p>
                                     </div>
@@ -840,7 +840,7 @@
                     <!-- Sở thích -->
                     <ul class="extend">
                         <div class="extend-item--title-header-sothich">
-                            <h1 class="extend-item--title-h1-ST">興味</h1>
+                            <h1 class="extend-item--title-h1-ST">趣味</h1>
                         </div>
                         <li class="extend-item">
                             <div class="extend-item-text-title">
@@ -881,10 +881,10 @@
                                         <div class="ententain-text">
                                             <a href="https://www.youtube.com/watch?v=FBJ2FGn-scs&ab_channel=Web5Ngay" target="_blank">
                                                 <h3 class="ententain-text--h3">
-                                                    Web5Ngayシャネルです🧑‍🏫
+                                                    Web5Ngayシャネル🧑‍🏫
                                                 </h3>
                                             </a>
-                                            <span class="ententain-text-span">このチャンネルは人生の価値観と家族を大切にすることを分かってくれたことです。本当にありがとうございました👍</span>
+                                            <span class="ententain-text-span">このチャンネルは人生の価値観と家族を大切にすることを教えてくれました。本当にありがとうございました👍</span>
                                         </div>
                                     </div>
                                     <div class="ententain">
@@ -899,7 +899,7 @@
                                                     F8ウェブサイトー仕事のための勉強👨‍🏫
                                                 </h3>
                                             </a>
-                                            <span class="ententain-text-span">このウェブサイトには全てのウェブサイトに関連する技能の情報が掲載されています。それら全ては無料で利用できます。このウェブサイトを多くの学生が利用しています。❤️</span>
+                                            <span class="ententain-text-span">このウェブサイトには全てのウェブサイトの技能に関する情報が掲載されています。それら全ては無料で利用できます。このウェブサイトを多くの学生が利用しています。❤️</span>
                                         </div>
                                     </div>
                                     <div class="ententain">
@@ -914,7 +914,7 @@
                                                     Lại Tuấn Dũng博士（オーストラリア）のAIに関する勉強👨‍🏫
                                                 </h3>
                                             </a>
-                                            <span class="ententain-text-span">彼はとても若い博士ですが知識が豊富な人です。特に専門である人工知能について多くを知っています。私は彼を尊敬しています。👋</span>
+                                            <span class="ententain-text-span">彼はとても若い博士ですが知識が豊富です。特に専門である人工知能について多くのことを知っています。私は彼を尊敬しています。👋</span>
                                         </div>
                                     </div>
                                     <div class="ententain"onclick="javascript:window.location.href='#' ">
@@ -929,7 +929,7 @@
                                                     友達と遊びに行くことです👦
                                                 </h3>
                                             </a>
-                                            <span class="ententain-text-span">大学では、あまり友達がいませんが、信頼し合える友達ととても友好的な関係を築いています。一緒に勉強したり遊んだり旅行に行ったりしています。友達の存在に、私の気持ちは助けられています。😍</span>
+                                            <span class="ententain-text-span">大学では、あまり友達がいませんが、信頼し合える友達ととても友好的な関係を築いています。一緒に勉強したり遊んだり旅行に行ったりしています。友達の存在に、私は助けられています。😍</span>
                                         </div>
                                     </div>
 
