--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                             <div class="intro-user-right">
                                 <h1 class= "intro-user-right__name">ホー  ハック  ハイ</h1>
                                 <div class="intro-user-right__job">
-                                    UITの学生の３年生
+                                    ベトナム国家大学ホーチミン市情報通信大学３年
                                 </div>
                                 <div class="intro-user-right__KHOA">
-                                    情報通信大学の情報技術科学学部
+                                    情報技術科学学部
                                 </div>
                                 <div class="intro-user-right__KHOA">
-                                    専攻は日本のIT方向
+                                    専攻：日本向けIT
                                 </div>
                                 <ul class="intro-user-right__social">
                                     <li class="intro-user-right__social-icon facebook">
