--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                 初めまして。 Haiと申します。
                             </p>
                             <p class="extend-item-para">
-                                今ベトナム国家大学ホーチミン市情報通信大学の情報技術科学学部の３年生です。専攻はITです。高校生のときからパソコンに趣味を持っていたので、高校卒業後、パソコンについて深く研究するために、IT系の大学に進学しました。今AIとフロントエンドと機械学習を勉強しているところです。暇なときはギターを弾いたり、日本語を勉強したり、時々友達と一緒に旅行に行ったりしています。私の強みは数学です。数学がわかるおかげで、プログラムも上手くできます。弱みは英語で、話すことがあまり得意ではありません。でも、だからこそ、大学では、頑張って英語を勉強しています。短期的な目標は１年目から２年目の間に会社の実際のプロジェクトに参加することです。そのための技能や経験を得るために、たくさん勉強しなければなりません。長期的な目標は３年目から５年目の間にプロジェクトマネージャーになることです。何でもできる社員になりたいです。 
+                                現在、ベトナム国家大学ホーチミン市情報通信大学の情報技術科学学部の３年生です。専攻はITです。高校生のときからパソコンに興味を持っていたので、高校卒業後、パソコンについて深く研究するために、IT系の大学に進学しました。今AIとフロントエンドと機械学習を勉強しています。暇なときはギターを弾いたり、日本語を勉強したり、時々友達と一緒に旅行に行ったりしています。私の強みは数学です。数学がわかるおかげで、プログラムも上手くできます。弱みは英語で、話すことがあまり得意ではありません。でも、だからこそ、大学では、頑張って英語を勉強しています。短期的な目標は１年目から２年目の間に会社の実際のプロジェクトに参加することです。そのための技能や経験を得るために、たくさん勉強しなければなりません。長期的な目標は３年目から５年目の間にプロジェクトマネージャーになることです。何でもできる社員になりたいです。 
                             </p>
                             <p class="extend-item-para">
                                 どうぞよろしくお願いいたします。
@@ -558,7 +558,7 @@
                                     <div class="extend-item--body">
                                         <h4 class="extend-item-text-title--h4-skill">
                                             <i class='bx bxs-check-square'></i>
-                                            家で自分勉強すること
+                                            自習：
                                         </h4>
                                         <!-- <p class="extend-item-para-title">
                                             2/9/2021 - nay  
