--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                                         </h4>
                                         <h4 class="extend-item-text-title--h4-MT">
                                             <i class='bx bxs-star'></i>
-                                            学部：情報技術科学学部。
+                                            学部：情報技術科学学部
                                         </h4>
                                         <h4 class="extend-item-text-title--h4-MT">
                                             <i class='bx bxs-star'></i>
