--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                                            2019 - nay 
                                         </p> -->
                                         <p class="extend-item-para-text">
-                                            私には大勢の人がいる前でもしっかり話すことができる能力があります。高校時代にギタークラブを作り、３０人の部員と一緒に活動したり、大勢の人の前で演奏したりした経験のおかげです。私は大学でも、クラスメイトの前で積極的にプレゼンテーションを担当するようにしています。
+                                            私には大勢の人がいる前でもしっかり話すことができる能力があります。高校時代にギタークラブを作り、３０人の部員と一緒に活動したり、大勢の人の前で演奏したりした経験のおかげです。私は大学でも、クラスメイトの前で積極的にプレゼンテーションを担当するようにしています
                                         </p>
                                     </div>
                                     <div class="extend-item--body active-line-skill">
@@ -805,7 +805,7 @@
                                     <div class="extend-item--body active-line-MT">
                                         <h4 class="extend-item-text-title--h4-MT">
                                             <i class='bx bxs-star'></i>
-                                            会話技能、具体的にはチームメンバーや取引先との円滑な話し方を身に付ける。
+                                            多くの経験と技能と知識を身につけること
                                         </h4>
                                         <!-- <p class="extend-item-para-title">
                                            .../9/2022
@@ -817,11 +817,11 @@
                                     <div class="extend-item--body">
                                         <h4 class="extend-item-text-title--h4-MT">
                                             <i class='bx bxs-star'></i>
-                                            三年程度でジュニア開発者をシニア開発者にまで成長させる支援ができる。
+                                            特に取引先と話し、チームワークがよくなるように、コミュニケーションスキルについて学びたいです。そして、3年間ぐらいでジュニア開発者をシニア開発者まで成長させられるようなトレーナーになりたいです
                                         </h4>
                                         <h4 class="extend-item-text-title--h4-MT">
                                             <i class='bx bxs-star'></i>
-                                            三年目から五年目の間にプロジェクトマネージャーになることです。
+                                            三年目から五年目の間にプロジェクトマネージャーになること
                                         </h4>
                                         <!-- <p class="extend-item-para-title">
                                             .../.../2023
