--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                         <div class= "case-item">
                                             <img src="./img/hohachai.JPG" alt="" class="case-item--img">
                                         </div>
-                                        <a class="list-project" href="https://github.com/HaiHoHac2001/Web_my_band"><h3 class="case-item--h3">自分のバンド</h3></a>
+                                        <a class="list-project" href="https://hohachai-band.netlify.app/"><h3 class="case-item--h3">自分のバンド</h3></a>
                                         
                                     </div>
                                 </div>
