--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                 初めまして。 Haiと申します。
                             </p>
                             <p class="extend-item-para">
-                                現在、ベトナム国家大学ホーチミン市情報通信大学の情報技術科学学部の３年生です。専攻はITです。高校生のときからパソコンに興味を持っていたので、高校卒業後、パソコンについて深く研究するために、IT系の大学に進学しました。今AIとフロントエンドと機械学習を勉強しています。暇なときはギターを弾いたり、日本語を勉強したり、時々友達と一緒に旅行に行ったりしています。私の強みは数学です。数学がわかるおかげで、プログラムも上手くできます。弱みは英語で、話すことがあまり得意ではありません。でも、だからこそ、大学では、頑張って英語を勉強しています。短期的な目標は１年目から２年目の間に会社の実際のプロジェクトに参加することです。そのための技能や経験を得るために、たくさん勉強しなければなりません。長期的な目標は３年目から５年目の間にプロジェクトマネージャーになることです。何でもできる社員になりたいです。 
+                                現在、ベトナム国家大学ホーチミン市情報通信大学の情報技術科学学部の３年生です。専攻はITです。高校生のときからパソコンに興味を持っていたので、高校卒業後、パソコンについて深く研究するために、IT系の大学に進学しました。今AIとフロントエンドと機械学習を勉強しています。暇なときは日本語を勉強したり、ギターを弾いたり、時々友達と一緒に旅行に行ったりしています。私の強みは数学です。数学がわかるおかげで、プログラムも上手くできます。弱みは英語で、話すことがあまり得意ではありません。でも、だからこそ、大学では、頑張って英語を勉強しています。短期的な目標は１年目から２年目の間に会社の実際のプロジェクトに参加することです。そのための技能や経験を得るために、たくさん勉強しなければなりません。長期的な目標は３年目から５年目の間にプロジェクトマネージャーになることです。何でもできる社員になりたいです。 
                             </p>
                             <p class="extend-item-para">
                                 どうぞよろしくお願いいたします。
@@ -605,6 +605,12 @@
                                             <div class="container-skills-progress-bar" data-progress="70">
                                                 <p>Javascript</p>
                                                 <span>70%</span>
+                                            </div>
+                                        </div>
+                                        <div class="container-skills-progress">
+                                            <div class="container-skills-progress-bar" data-progress="70">
+                                                <p>React JS</p>
+                                                <span>80%</span>
                                             </div>
                                         </div>
 
